MoodService - бизнес логика системы [#505299 #524689]